# Zettelkasten-notion-reader

./: .gitignore  README.md  pyproject.toml
zettelkasten_notion_reader/: client.py  main.py
