[tool.poetry]
name = "zettelkasten-notion-reader"
version = "0.1.0"
description = ""
authors = ["Asdrúbal Iván Suárez Rivera <asdrubal.ivan.suarez.rivera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
requests = "^2.28.0"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
requests-cache = "^0.9.4"
pyvis = "^0.2.1"
networkx = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
